# es

./: .envrc  .gitignore  README.md  check-lock-consistency.py  check-lock-input.py  flake.nix  iso-offiline.patch  run-all-tests.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0x6mdgq3lgh6q72394718h34wv5jsg4d-source  40w1i37kf1s1ljj3a22ngi5b66bsd225-source  cyw17id0csq7151vpfa27vs0zgfgfcnp-source  ysmkgvv5z8kfzfghal6ccfkrppk3d58i-source
.github/workflows/: combinations.yml  docker-on-github-actions.yaml  tests.yml
.profiles/: dev-1-link  dev-shell-x86_64-linux-default
src/pkgs/: default.nix
src/pkgs/install-nix-flakes-home-manager-zsh-template/: default.nix
src/pkgs/install-poetry2nix-basic/: default.nix
src/pkgs/install-qemu-virtual-machine-docker/: default.nix
src/pkgs/install-qemu-virtual-machine-docker-template/: default.nix
src/pkgs/install-qemu-virtual-machine-xfce-copy-paste-minimal-template/: default.nix
src/pkgs/install-qemu-virtual-machine-xfce-copy-paste-template/: default.nix
src/pkgs/install-start-config-template/: default.nix
src/pkgs/send-to-cache-install-start-config-template/: default.nix
src/pkgs/update-templates-script/: README.md  script.py
src/templates/: default.nix
src/templates/automatic-login/: README.md
src/templates/binfmt-emulated-riscv64-python-alpine-wheels-via-pip-and-docker/: README.md  flake.nix
src/templates/binfmt-emulated-riscv64-python-wheels-docker-registry-images/: README.md  flake.nix
src/templates/binfmt-emulated-systems-docker/: README.md  flake.nix
src/templates/binfmt-emulated-systems-hello/: README.md  flake.nix
src/templates/binfmt-emulated-systems-python-docker-registry-images/: README.md  flake.nix
src/templates/bug-nixostest/: README.md  flake.nix
src/templates/bug-qemu-virtual-machine-xfce-copy-paste/: flake.nix
src/templates/cpp/: README.md  flake.nix
src/templates/cpp-valgrind/: README.md  flake.nix
src/templates/cross-compiling-nixos-vm/: README.md
src/templates/docker-multiple-kernel-versions/: README.md  flake.nix
src/templates/docker-tools/: .gitignore  README.md  flake.nix
src/templates/fastapi-celery-app/: Dockerfile  README.md  main.py
src/templates/fastapi-celery-app-docker-compose-pip/: README.md  docker-compose.yml  flake.nix  requirements.txt
src/templates/fastapi-celery-app-docker-compose-poetry/: Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml
src/templates/fastapi-celery-app-docker-compose-poetry2nix/: Dockerfile  README.md  flake.nix
src/templates/fastapi-celery-app-docker-compose-uv/: Dockerfile  README.md  flake.nix  main.py  pyproject.toml
src/templates/flake-utils-godot4/: .gitignore  README.md  flake.nix
src/templates/flamegraphs/: README.md
src/templates/flutter-android-devshell/: .gitignore  README.md  flake.nix  pubspec.yaml
src/templates/flutter-devshell/: .gitignore  README.md  flake.nix
src/templates/flutter-web-hello/: README.md  flake.nix  pubspec.yaml
src/templates/fontspec-xetex/: flake.nix
src/templates/gs-clean-pdf/: flake.nix
src/templates/home-manager-bloated/: README.md  flake.nix  home.nix
src/templates/home-manager-inline-self-contained-copy-paste/: README.md
src/templates/home-manager-mult-inputs/: README.md
src/templates/hybrid-latex/: README.md  flake.nix
src/templates/js-example-bcrypt/: flake.nix  test.js
src/templates/js-example-bun-create-vue/: flake.nix
src/templates/js-example-ffi-napi/: flake.nix
src/templates/js-example-native-modules/: package.json
src/templates/js-example-nestjs/: package-lock.json  package.json
src/templates/js-example-nix-flakes-docker/: flake.nix
src/templates/js-example-python312-oci-image/: .gitignore  flake.nix
src/templates/js-example-vue-js/: flake.nix  package-lock.json
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-poetry2nix-django-rest-framework-hello/backend/: pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-poetry2nix-django-rest-framework-hello/backend/api/: manage.py  runserver.py
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-poetry2nix-django-rest-framework-hello/backend/api/drfhello/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-poetry2nix-fastapi-bloated/: README.md  flake.nix  pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-poetry2nix-flask-bloated/: flake.nix  pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-poetry2nix-flask-bloated/app/: main.py
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-poetry2nix-flask-mmh3/: flake.nix  pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-potry2nix-django-rest-framework-hello/backend/: docker-compose.yml  dot-env-example  pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-potry2nix-django-rest-framework-hello/backend/api/: manage.py  runserver.py
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-potry2nix-django-rest-framework-hello/backend/api/drfhello/: settings.py  urls.py
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-potry2nix-fastapi-hello/: README.md  flake.nix  pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-potry2nix-fastapi-hello/app/: main.py
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-potry2nix-flask-pandas/: flake.nix  pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-uv2nix-fastapi-pandas/: flake.nix  pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-uv2nix-flask-geopandas/: flake.nix  pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-uv2nix-flask-geopandas/app/: main.py
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-uv2nix-flask-numpy/: flake.nix  pyproject.toml
src/templates/qemu-virtual-machine-xfce-copy-paste-docker-uv2nix-flask-polars/: flake.nix  pyproject.toml
(+550 files in other folders)
