[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Your Name"]
license = "MIT"
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.116.1"
celery = {version = "5.5.3", extras = ["redis"]}
uvicorn = {version = "0.35.0", extras = ["standard"]}

[tool.poetry.scripts]
start-app = "app.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
