[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.3"
jupyter = "1.1.1"
matplotlib = "3.10.1"
nbconvert = "7.16.6"
nbformat = "5.10.4"
pandas = "2.2.3"
pytest = "8.3.5"
scipy = "1.15.2"
seaborn = "0.13.2"
sentencepiece = "0.2.0"
torch = "2.6.0"
transformers = "4.51.3"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
