[project]
name = "app"
version = "0.0.1"
description = ""
requires-python = "==3.11.*"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic-core>=2.34.1",
    "pandas>=2.2.3",
]

[project.scripts]
start-app = "app.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
