[project]
name = "app"
version = "0.0.1"
description = ""
requires-python = "==3.11.*"
dependencies = [
    "flask>=3.0.3",
    "polars>=1.12.0",
]

[project.scripts]
start = "app.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
