[tool.poetry]
name = "api"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "?"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "3.15.2"
django = "^5.1.3"

[tool.poetry.scripts]
api = "api.runserver:run_my_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
